4.2.1 release (#17)